--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,10 +1,10 @@
 .gallery {
   position: relative;
-  padding: 80px 0;
-  min-height: 510px;
+  /* padding: 80px 0; */
+  min-height: 400px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   background-color: transparent;
 }
 
@@ -14,7 +14,7 @@
   max-width: 600px;
   margin: 0 auto;
   text-align: center;
-  padding: 50px 40px;
+  /* padding: 50px 40px; */
 }
 
 .gallery__decorative-svg {
@@ -119,7 +119,7 @@
   }
 
   .gallery__title {
-    font-size: 28px;
+    font-size: 36px;
   }
 }
 
@@ -129,7 +129,7 @@
   }
 
   .gallery__title {
-    font-size: 32px;
+    font-size: 36px;
   }
 }
 
