--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -35,6 +35,23 @@
 }
 
 .hero__title {
+  display: flex;
+  padding-left: 80px;
+  justify-content: start;
+  color: var(--primary-color);
+  font-size: 48px;
+  font-family: var(--font-armenian);
+  line-height: 1.2;
+  font-weight: 400;
+  margin-bottom: 10px;
+  opacity: 0;
+  animation: fadeIn 0.8s ease-in 0.3s forwards;
+}
+
+.hero__title2 {
+  display: flex;
+  padding-right: 80px;
+  justify-content: end;
   color: var(--primary-color);
   font-size: 48px;
   font-family: var(--font-armenian);
@@ -149,11 +166,10 @@
 }
 
 .hero__open-text {
-  font-size: 15px;
-  font-family: var(--font-main);
+  font-size: 35px;
+  font-family: var(--font-armenian);
   font-weight: 400;
   letter-spacing: 3px;
-  text-transform: uppercase;
   color: var(--primary-color);
   margin-top: 24px;
   cursor: pointer;
@@ -222,6 +238,10 @@
     font-size: 36px;
   }
 
+  .hero__title2 {
+    font-size: 36px;
+  }
+
   .hero__subtitle {
     font-size: 26px;
     margin-bottom: 40px;
@@ -260,7 +280,11 @@
 
 @media screen and (max-width: 479px) {
   .hero__title {
-    font-size: 32px;
+    font-size: 38px;
+    line-height: 1.3;
+  }
+  .hero__title2 {
+    font-size: 38px;
     line-height: 1.3;
   }
 
