--- a/src/styles/Invitation.css
+++ b/src/styles/Invitation.css
@@ -4,8 +4,6 @@
   padding: 60px 0;
   background: transparent;
   border-radius: 300px 300px 0 0;
-  /* overflow: visible; */
-  
 }
 
 .invitation__content {
@@ -72,26 +70,26 @@
 }
 
 .invitation__names {
-  font-size: 60px;
+  font-size: 65px;
   font-family: var(--font-armenian);
   line-height: 1.3;
   font-weight: 400;
   color: white;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   text-shadow: 0 2px 12px rgba(0, 0, 0, 0.5),
                0 4px 24px rgba(0, 0, 0, 0.4);
 }
 
 /* Countdown Timer */
 .invitation__countdown {
-  margin: 40px 0;
-  margin-top: 180px;
+  /* margin: 40px 0; */
+  margin-top: 30px;
   text-align: center;
 }
 
 .invitation__countdown-title {
   font-size: 16px;
-  font-family: var(--font-main);
+  font-family: var(--font-armenian);
   color: white;
   margin-bottom: 20px;
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
@@ -114,7 +112,7 @@
 
 .invitation__countdown-number {
   font-size: 64px;
-  font-family: var(--font-main);
+  font-family: var(--font-armenian);
   font-weight: 300;
   color: white;
   line-height: 1;
@@ -124,8 +122,8 @@
 }
 
 .invitation__countdown-label {
-  font-size: 14px;
-  font-family: var(--font-main);
+  font-size: 20px;
+  font-family: var(--font-armenian);
   color: white;
   text-transform: lowercase;
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
@@ -140,8 +138,8 @@
 }
 
 .invitation__text {
-  font-size: 18px;
-  font-family: var(--font-main);
+  font-size: 20px;
+  font-family: var(--font-armenian);
   line-height: 1.8;
   font-weight: 300;
   color: white;
@@ -182,7 +180,7 @@
   }
 
   .invitation__names {
-    font-size: 45px;
+    font-size: 65px;
   }
 
   .invitation__title {
@@ -204,11 +202,11 @@
   }
 
   .invitation__countdown-label {
-    font-size: 12px;
+    font-size: 20px;
   }
 
   .invitation__text {
-    font-size: 16px;
+    font-size: 20px;
     max-width: 90%;
   }
 
@@ -224,7 +222,7 @@
   }
 
   .invitation__names {
-    font-size: 50px;
+    font-size: 65px;
   }
 
   .invitation__title {
@@ -243,7 +241,7 @@
   }
 
   .invitation__text {
-    font-size: 16px;
+    font-size: 20px;
     max-width: 95%;
   }
 
@@ -259,7 +257,7 @@
   }
 
   .invitation__text {
-    font-size: 17px;
+    font-size: 20px;
   }
 
 }
